tests/semantic/valid/nested_scopes/shadow_inner.src
fn main() -> int {
  int x = 1;
  {
    int x = 2;
    return x;
  }
}
