tests/semantic/invalid/type_mismatch/assign_string_to_int.src
fn main() -> void {
  int x;
  x = "hello";
}
